@@ -1140,15 +1140,20 @@ example(ci2ms)
 
 The definition is as follows,
 ```{r}
-gc.lambda <- function(p) {
-  p <- p[!is.na(p)]
-  n <- length(p)
-
-  obs <- qchisq(p,1,lower.tail=FALSE)
-  exp <- qchisq(1:n/n,1,lower.tail=FALSE)
-
-  lambda <- median(obs)/median(exp)
-  return(lambda)
+gc.lambda <- function (p, logscale = FALSE)
+{
+    p <- p[!is.na(p)]
+    n <- length(p)
+    if (!logscale) {
+        obs <- qchisq(p, 1, lower.tail = FALSE)
+        exp <- qchisq(1:n/n, 1, lower.tail = FALSE)
+    }
+    else {
+        obs <- qchisq(-log(10) * p, 1, lower.tail = FALSE, log.p = TRUE)
+        exp <- qchisq(log(1:n/n), 1, lower.tail = FALSE, log.p = TRUE)
+    }
+    lambda <- median(obs)/median(exp)
+    return(lambda)
 }
 
 # A simplified version is as follows,
