@@ -2,6 +2,7 @@ Version history of the R genetic analysis package (R/gap)
 
 Version 1.5-2
 18-07-2023	Extend gc.lambda() for -log10(P) and drop -log10(P)<2 for IL-12B plot in gap.Rmd
+		Amend circos.mhtplot2() with an addtional track
 		Add ci2ms() for PhenoScanner/GWAS Catalog lookup and refine h2_mzdz()
 		Drop genetics/GeneticsDesign reference in pbsize2() and backslash (\%) in tscc()
 		Rename SNP functions and document hg18/19/38
